# myo-unity

./: CMakeLists.txt  Info.plist  LICENSE.txt  README.md
project/: .gitignore
project/Assets/Myo/: README-MyoUnity.txt
project/Assets/Myo Samples/: Box On A Stick.unity
project/Assets/Myo Samples/Materials/: Basic (brighter).mat  Basic.mat  Blue.mat  Green.mat  Purple.mat  Red.mat
project/Assets/Myo Samples/Scripts/: ColorBoxByPose.cs  JointOrientation.cs  SampleSceneGUI.cs
project/Assets/Myo/Prefabs/: Hub - 1 Myo.prefab  Hub - 2 Myos.prefab
project/Assets/Myo/Scripts/: MyoBindings.cs  MyoIOSManager.cs  ThalmicHub.cs  ThalmicMyo.cs
project/Assets/Myo/Scripts/Myo.NET/: EventTypes.cs  Hub.cs  Myo.cs  Pose.cs  Quaternion.cs  Vector3.cs  libmyo.cs
project/Assets/Myo/Scripts/Myo.NET/Properties/: AssemblyInfo.cs
project/Assets/Myo/Utils/: MiniJSON.cs
project/MyoUnityIOS/MyoUnityIOS/: MyoSDKBinding.mm  MyoSDKManager.h  MyoSDKManager.mm
project/MyoUnityIOS/MyoUnityIOS.xcodeproj/: project.pbxproj
project/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
